adjust text and outlier threshold

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </div>
 
     <div id="small_mult_chart_area">
-      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day</p>
-      <p id="small_mult_chart_title2">Trip Duration (Min) of All Rides in Greater Boston During an Average Day in Each Month, 2019 (horizontal line indicates trip duration mean, sans outliers)</p>
+      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day By Month</p>
+      <p id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019.<br><br>The horizontal line indicates mean trip duration after excluding outliers greater than 10 hours. </p>
 
 <div id="small_mult_table_cont">
 
