--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="small_mult_chart_area">
       <p id="small_mult_chart_title">Blue Bike Duration by Time of Day By Month</p>
-      <p id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019.<br><br>The horizontal line indicates mean trip duration after excluding outliers greater than 10 hours. </p>
+      <p id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019. The horizontal line indicates mean trip duration (after excluding outliers greater than 10 hours). </p>
 
 <div id="small_mult_table_cont">
 
