--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </div>
 
     <div id="small_mult_chart_area">
-      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day By Month</p>
-      <p class="smallMultChartDescr" id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019. The horizontal line indicates mean trip duration (after excluding outliers greater than 10 hours). </p>
+      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day Each Month</p>
+      <p class="smallMultChartDescr" id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019. Each point represents a separate Blue Bike ride. The horizontal line indicates mean trip duration. Outliers of duration greater than 10 hours or under 1 minute have been excluded. </p>
 
 <div id="small_mult_table_cont">
 
@@ -54,18 +54,20 @@
 </div>
 
   <div>
-    <p class="smallMultChartDescr">The small multiple chart above displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start time and y-coordinate its duration in minutes.
-    </p>
-    <p class="smallMultChartDescr" id="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspondes to the average rides taken per day in that month. Outliers falling outside a duration of 120 minutes are excluded as are rides less than 1 minute long.
+    <p class="smallMultChartDescr" id="small_mult_chart_descript2">The data points included are a representative subset of all rides taken during that month such that the total number of points corresponds to the average rides taken per day in that month. The charts focus in on just those rides under 30 minutes in duration, which comprise the vast majority.
     </p>
   </div>
   <div id="bottom_descript_cont">
-    <p class="smallMultChartDescr" id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm with the majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger and longer clusters of rides occurring around 8am as well as around 6pm, probably corresponding to commutes to and from work.
+    <p class="smallMultChartDescr"><b>Key Observations</b></p>
+    <p class="smallMultChartDescr" id="bottom_descript1">From this small multiples chart we see that density of rides is greatest during summer and fall months, as expected, and dwindles in the winter. We also see that the average duration of rides is also highest in these warmer months and lowest in November through February. Consistent across months, however, is a noticeable density of rides at around 9am and 5pm - morning and evening rush hour - as well as a smaller, less substantial density around noontime. Almost all rides occur between 7am and 10pm.
     </p>
-    <p class="smallMultChartDescr" id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these latter months also tend to be shorter in duration, proably because of colder weather. Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. Used by tends of thousands, shared bikes are an equitable, sustainable, healthy, and influential contributor to the rich ecosystem of urban transportation.
-      <a href="https://www.bluebikes.com/about/media-kit">Learn more
+    <p class="smallMultChartDescr"><b>In Closing</b></p>
+    <p class="smallMultChartDescr">
+      Regardless of month, there are always a substantial number of Blue Bike riders, many of whom use the system for daily work commutes. Used by tens of thousands, the Greater Boston shared bike program provides a sustainable, equitable, healthy, and impactful contributor to the rich ecosystem of urban transportation.
+      <a href="https://www.bluebikes.com/about/">Learn more
       </a>
-    </p>
+    <p/>
+
   </div>
   <script src="generateScatters.js"></script>
 </body>
