make headings instead

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
     <div id="small_mult_chart_area">
-      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day Each Month</p>
+      <h2 id="small_mult_chart_title" class="smallMultChartDescr">Blue Bike Duration by Time of Day Each Month</h2>
       <p class="smallMultChartDescr" id="small_mult_chart_title2">The below charts show Blue Bike trip duration (in minutes) for all rides in Greater Boston during an average day in each month of 2019. Each point represents a separate Blue Bike ride. The horizontal line indicates mean trip duration. Outliers of duration greater than 10 hours or under 1 minute have been excluded. </p>
 
 <div id="small_mult_table_cont">
@@ -58,10 +58,10 @@
     </p>
   </div>
   <div id="bottom_descript_cont">
-    <p class="smallMultChartDescr"><b>Key Observations</b></p>
+    <h2 class="smallMultChartDescr"><b>Key Observations</b></h2>
     <p class="smallMultChartDescr" id="bottom_descript1">From this small multiples chart we see that density of rides is greatest during summer and fall months, as expected, and dwindles in the winter. We also see that the average duration of rides is also highest in these warmer months and lowest in November through February. Consistent across months, however, is a noticeable density of rides at around 9am and 5pm - morning and evening rush hour - as well as a smaller, less substantial density around noontime. Almost all rides occur between 7am and 10pm.
     </p>
-    <p class="smallMultChartDescr"><b>In Closing</b></p>
+    <h2 class="smallMultChartDescr"><b>In Closing</b></h2>
     <p class="smallMultChartDescr">
       Regardless of month, there are always a substantial number of Blue Bike riders, many of whom use the system for daily work commutes. Used by tens of thousands, the Greater Boston shared bike program provides a sustainable, equitable, healthy, and impactful contributor to the rich ecosystem of urban transportation.
       <a href="https://www.bluebikes.com/about/">Learn more
