--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta charset="utf-8">
+  <meta property="og:image" content="website_thumbnail.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:site_name" content="A City In Motion" />
+  <meta property="og:title" content="Do More, Better" />
+  <meta property="og:description" content="Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville." />
+  <meta property="og:url" content="https://dana-bullister.github.io/blue-bikes/">
+  <meta property="og:type" content="website" />
   <link rel="stylesheet" href="style/styles.css">
   <title>Blue Bikes</title>
   <script src="https://d3js.org/d3.v6.js"></script>
