add text with data source

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         <a href="https://www.bluebikes.com/about/">Learn more
         </a>
       </p>
+      <p class="sourceNote">
+        Source:
+        <a href="https://s3.amazonaws.com/hubway-data/index.html">Public Bluebikes Data Repository
+        </a>
+      </p>
 
     </div>
     <script src="generateScatters.js"></script>
