--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </p>
       <p class="sourceNote">
         Source:
-        <a href="https://s3.amazonaws.com/hubway-data/index.html">Public Bluebikes Data Repository
+        <a href="https://s3.amazonaws.com/hubway-data/index.html">Bluebikes Public Data Repository
         </a>
       </p>
 
